Update overleaf to texstudio

--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -31,7 +31,7 @@ The domain category is based on how broad the domain is in which they are used. 
 Chatbots can be divided up based on the platform on which they are active. \textbf{Social media} chatbots use platforms such as Facebook Messenger, Facebook WhatsApp or Telegram Messenger for their communication with the user. \textbf{Web based} chatbots are most common on websites of companies. There, they get their own chat box to serve clients that way. \textbf{Standalone program} chatbots are installed as a separate program on the device of the user \citep*{Maroengsit2019, Xu2017, CICBA2018}.\\
 
 \subsubsection{Type of service provided}
-\textbf{Goal-based} chatbots have a \textbf{set goal} they want to reach. For example, a set goal could be to sell a specific product to the customer. Once the product is sold, the chatbot has successfully reached its goal and thus fulfilled its purpose. \textbf{Knowledge-based} chatbots are classified on \textbf{the knowledge they possess}. \textbf{Service-based} chatbots are divided on \textbf{the services they provide} to the customer. Response-generated based chatbots are classified based on what action it performs in response generation \citep{Nuruzzaman2018}. It is possible that e.g., a goal-based chatbot can be a service-based or knowledge-based chatbot and vice versa.\\
+\textbf{Goal-based} chatbots have a \textbf{set goal} they want to reach. For example, a predefined goal could be to sell a specific product to the customer. Once the product is sold, the chatbot has successfully reached its goal and thus fulfilled its purpose. \textbf{Knowledge-based} chatbots are classified on \textbf{the knowledge they possess}. \textbf{Service-based} chatbots are divided on \textbf{the services they provide} to the customer. Response-generated based chatbots are classified based on what action it performs in response generation \citep{Nuruzzaman2018}. It is possible that e.g., a goal-based chatbot can be a service-based or knowledge-based chatbot and vice versa.\\
 
 \subsubsection{Task}
 This categorisation results in \textbf{task-oriented} and \textbf{non-task-oriented} chatbots. The latter is more \textbf{question oriented} and the first one is \textbf{more conversational} \citep{Nuruzzaman2018}. Task-oriented chatbots aim to assist the customer to complete a certain task and have a short conversation. Examples are Siri, Google Now and Alexa. Non-task-orientd chatbots focus on conversing with the customers to answer questions and for entertainment purposes. \citep{Nuruzzaman2018}\\
@@ -46,18 +46,26 @@ This categorisation results in \textbf{task-oriented} and \textbf{non-task-orien
 \end{enumerate}
 
 \section{Customer service chatbots in the telecom industry: a deeper insight}
-The telecom sector is an industry where customer satisfaction is an important factor. The different companies within this sector provide the same kind of services and products which makes switching operators easy. According to the research by \citep{Quintino2019}, the use of chatbots has a significant effect on customer satisfaction by ensuring better customer service. The findings from the research of \citeauthor{Quintino1019} were applied to Portuguese telecom companies, with this paper the line is further drawn into the Belgian telecom sector.\\
+The telecom sector is an industry where customer satisfaction is an important factor. The different companies within this sector provide the same kind of services and products which makes switching operators easy. According to the research by \citep{Quintino2019}, the use of chatbots has a significant effect on customer satisfaction by ensuring better customer service. The findings from the research of \citeauthor{Quintino1019} were applied to Portuguese telecom companies, with this paper the line is further drawn into the Belgian \& Dutch telecom sector.\\
+
 \subsection{The Belgian telecom industry: market overview}
 The Belgian telecom sector is known as one of the most expensive in Europe, in the Eurostat survey conducted in 2019 it is even known as the most expensive in Europe \citep{Eurostat2020}. The services offered by the telecom operators can be divided into 2 categories: fixed internet and mobile.\\
 \break
 According to the 2020 annual report published by the \acrfull{bipt}, Proximus is the market leader in both fixed internet (45.3\%) and mobile (39\%). Telenet is in second place in both categories; for fixed Internet they have a market share of 35.6\%, for mobile this is 26\%. There is also a 3rd player that has been growing in recent years, Orange has a market share of 7.2\% in the fixed internet and +/- 26\% in the mobile market. \citep*{BIPT2021,VanLeemputten2021}.\\
+
+\subsection{The Dutch telecom industry: market overview}
+Just like in Belgium, the Dutch telecom industry is one of the more expensive in Europe, in the 2019 annual report released by Eurostat, the Netherlands ranked 5th \citep{Eurostat2020}. In the Netherlands, mobile and fixed internet are also among the fixed services offered by telecom providers.\\
+\break
+In the Telecom Monitor report of the first quarter of 2021 \citep{Acm2021}, it can be deduced how the Dutch market is divided. In terms of mobile service, KPN and T-Mobile are among the market leaders, with respective market shares between 25 and 30\%. VodafoneZiggo follows with a share between 20 and 25\%. Furthermore, the market is completed by other \acrfull{mvno} that have a share between 15 and 20\%. \citep{Acm2021}\\
+\break
+The distribution is different in the fixed internet market, where VodafoneZiggo is market leader with a share of between 40 and 45\%. KPN follows with a percentage between 35 and 40. T-Mobile, which mainly focuses on mobile services, has a market share that barely lies between 5 and 10\%. The market is further filled by DELTA Fiber Nederland and other providers, which both have a market share between 0 and 5\%. It is therefore striking that the distribution varies greatly depending on the type of services that are offered. \citep{Acm2021}
 
 \subsection{Challenges in the telecom industry}
 Telecom operators in general face several challenges that can cause such companies to go bust. According to research by \citeauthor{Quintino2019} \citep*{Quintino2019, Malviya2012}, the most important challenges in this sector are: determining the revenue stream, rapidly changing consumer demands. The various challenges have an overall effect on customer retention. The findings from Quintino's research are also confirmed in Joshi's research \citep{Joshi2014}, in this paper, the parameters that affect the customer experience of cellular mobile services within the telecom industry of India are investigated \citep*{Joshi2014, Quintino2019, Malviya2012}.\\
 \break
 As in Quintino's study, this study will look at how the customer experience can be further optimised. It will be investigated how the chatbot can respond to the different challenges within the telecom sector. The results from this study can be used by telecom providers to further adjust their services to the needs of their (potential) customers.
 
-\section{Key Attributes and components of a successful customer service chatbot}
+\section{Key Attributes of a successful customer service chatbot}
 Previous research \citep*{Muizzah2021, Verkeyn2018} has pointed out which characteristics are the most important. These characteristics can be grouped into some key dimensions provided by this previous research.\\
 
 \subsubsection{Functionality}
