--- a/Thesis/LaTeX/Methodology.tex
+++ b/Thesis/LaTeX/Methodology.tex
@@ -13,7 +13,7 @@ Even if reality suggests otherwise, the hypotheses are developed with a favourab
 Five research questions were formulated to answer this main research question:
 
 \subsubsection{RQ1: Are current customer service chatbots effective in helping people and solving their problems?}
-It is illogical to think that there will be people who will keep a good impression of a customer service chatbot after it was unable to help with or solve their existing problem. Multiple studies suggest that it is essential that the execution done by a chatbot is effective \textbf{[WIP: complete studies]}.\\
+It is illogical to think that there will be people who will keep a good impression of a customer service chatbot after it was unable to help with or solve their existing problem. Multiple studies suggest that it is essential that the execution done by a chatbot is effective \citep*{Muizzah2021, Brandtzaeg2018}.\
 In a task- oriented chatbot, under which a customer service chatbot can be placed, usefulness is key \citep{brandtzaeg2020}. Solving problems and providing help in an effective and efficient manner is the key to providing a good user experience. It is also crucial that the user's intentions are correctly interpreted and answered adequately.\\
 \break
 \citep{Verkeyn2018} categorized 28 quality attributes and divided them up in 5 dimensions. Based on these quality attributes, the evaluation of a chatbot is possible (see literature study). Relevant quality attributes that can be linked to the research question serve as the foundation for the hypotheses. In this way, the research question can be reliably tested against reality.\\
@@ -45,22 +45,33 @@ A “pleasant” customer experience can be seen as an experience where the cust
 \break
 Related hypotheses:
 \begin{enumerate}
-	%hypthese 6 gaan we eruit moeten laten, wordt niet ondervraagd in de survey
-	\item H6: Current customer service chatbots have a nice user-interface. Based on \citep{Verkeyn2018} quality attribute “User-interface” from the dimension “Graphical appearance” (reference: \citep*{Duijst2017, Kuligowska2015},
-	\item H7: Current customer service chatbots create an enjoyable interaction Based on \citep{Verkeyn2018} quality attribute “Create an enjoyable interaction” from the dimension “Humanity” (reference: \citep{Morrissey2013})
+	\item H6: Current customer service chatbots create an enjoyable interaction Based on \citep{Verkeyn2018} quality attribute “Create an enjoyable interaction” from the dimension “Humanity” (reference: \citep{Morrissey2013})
 \end{enumerate}
 
-\subsubsection{RQ4: Do the business users still prefer to use human over a customer service chatbot?}
-Humans have dealt with human interaction for thousands of years. Recently, a new means in the form of a chatbot has come into our lives. It isn’t strange to assume, considering humans are seen as social animals and our history, that a client would still prefer human interaction above interactions with a chatbot. Yet, the literature has a two-sided stance on this matter. Some articles make this statement to be correct \citep{Ashfaq2020} whilst others dispute its facts \citep*{Muizzah2021, Radziwil2021}. Since there is uncertainty, this research might help clear things up.\\
+\section{Methodology - Business Interviews}
+To gain more insight into what the customer service chatbot means for telecom businesses, an exploratory research was conducted through interviews. The interviews were conducted with conversational designers, product owners, developers and AI trainers from Proximus, Telenet, T-Mobile and KPN. Each interview was conducted online through Teams-meetings. The write-outs of these interviews can be found in the \ref{ch:appendices}ppendices\\
 \break
-H8: Business users still prefer human interaction above a customer service chatbot.\\
-\break
-Research hints at many possible problems when interacting with machines which can lead to frustrations. This makes users less likely to want to converse with chatbots. \citep*{Ashfaq2020, brandtzaeg2020, Goot2020} That is why the hypothesis start from the perspective that human-human interaction is still preferred.
+The interview consists of four main parts:
+\begin{enumerate}
+	\item The current state of the customer service chatbot;
+	\item The benefits that the company derives from the presence of the chatbot;
+	\item The business value (revenue, reduced costs) realised by the chatbot;
+	\item The company's future vision of the chatbot.
+\end{enumerate}
 
-\section{Methodology - interviews}
-\section{Methodology - survey}
-The exact methodology is shown below.\\
-\break
+\subsection{The current state of the customer service chatbot}
+The chatbot's general specifications were questioned in the first phase. This can be explained in terms of the chatbot's capabilities (FAQs, complaint handling, sales, etc. ), the platforms on which the bot can be found, the languages in which the bot can be addressed, the age group of the relevant users, and the types of questions the bot can answer (yes/no questions, open/vague questions).\\
+
+\subsection{The benefits that the company derives from the presence of the chatbot}
+The second section focuses on the specific benefits that the firm receives from using the chatbot. For example, the chatbot is asked what services it can provide. This primarily pertains to renewing or forming a new membership, purchasing products/services, obtaining specific invoice details, and so on. The question also asks to what extent the chatbot can reduce customer support workload, and then goes into further depth about how many questions or tasks a chatbot cannot perform on its own. Furthermore, the focus is on how eager clients of the providers are to use a chatbot. Finally, the negative aspects of the story are discussed. One questions asks, for example, if there is more frustration among customers and whether customers trust the chatbot.\\
+
+\subsection{The business value (revenue, reduced costs) realised by the chatbot}
+The third part is about the business value that is created. First, it looks at how much extra direct turnover is created by the chatbot. Then it looks at how this value is generated, it asks about the availability of the chatbot, and how it handles conversations when no physical agents are present. Next, it looks at what the initial strategic goal of the chatbot was, was it just added to improve customer service, or was it more of a marketing stunt?  It also asks how much the chatbot costs and which cost items were the most expensive. Finally, it looks at how many fewer people are employed in customer service because of the chatbot.\\
+
+\subsection{The company's future vision of the chatbot}
+The fourth and final part focuses on the company's future vision of the chatbot. They look at the extra features they want to add and how they want to improve the chatbot in terms of technology. The latter could include sentiment analysis, fully AI driven, and so on. Finally, they are asked how they determine what scenarios/dialogs they want to put in the bot and how they will apply this in the future.\\
+
+\section{Methodology - Survey}
 The research questions and hypotheses will be investigated by means of a joint survey.\\
 \break
 These two strategies will be used to generate the most amount of business value possible. For the business, the value is created by comparing the competition and gathering insight into what the customers consider important. For the customer is the value found in better chatbots as a result of the study.\\
@@ -98,11 +109,7 @@ To find out if the selected attributes are present, several questions will be us
 
 \subsubsection{RQ3: Do current customer service chatbots create a pleasant customer experience?}
 \begin{itemize}
-	\item H6: Current customer service chatbots have a nice user-interface.
-	\begin{itemize}
-		\item Did the chatbot look good?
-	\end{itemize}
-	\item H7: Current customer service chatbots create an enjoyable interaction.
+	\item H6: Current customer service chatbots create an enjoyable interaction.
 	\begin{itemize}
 		\item Did you enjoy interacting with the chatbot?
 	\end{itemize}
@@ -116,7 +123,7 @@ Both providers’ chatbots will be compared to one another to see which attribut
 \subsection{How important are these attributes for the clients?}
 The research questions and hypotheses will be investigated/evaluated by means of the proven KANO method. The method of application is inspired by the study of \citep{Verkeyn2018}.\\
 \break
-To find out which of the chose 7 attributes types are seen as important, the following questions per category will be used.
+To find out which of the chose 6 attributes types are seen as important, the following questions per category will be used.
 
 \subsubsection{Under ``Effective in helping people and solving their problems"}
 \begin{enumerate}
@@ -148,10 +155,6 @@ To find out which of the chose 7 attributes types are seen as important, the fol
 
 \subsubsection{Under "Pleasant customer experience"}
 \begin{enumerate}
-	\item User-interface
-	\begin{itemize}
-		\item The chatbot user-interface has/does NOT have a good-looking lay-out.
-	\end{itemize}
 	\item Create an enjoyable interaction
 	\begin{itemize}
 		\item The chatbot (DOES NOT) communicate(s) in a robotic, non-empathic way./ The chatbot interacts in an enjoyable way.
@@ -171,7 +174,7 @@ The levels are as follows:\\
 This scale allows users to express how much they agree with a given statement.\\
 
 \subsubsection{Data Evaluation Method - Comparative Study}
-To be able to answer the second main question, there is a need for an evaluation method that will list the general user importance for each quality attribute. Kano is a tool that can satisfy these desires. The Kano Model gives more insight into the fact that the performance of the quality attributes is not in a linear relationship with the corresponding customer satisfaction \citep{KANO1984}. Kano offers the possibility to divide the quality attributes into five categories that each have different effects on customer satisfaction (Performance, Must-Be, Attractive, Reverse, Indifferent). This division is done on the basis of the answers obtained from the survey (questions with five-level rating scale).\\
+To be able to answer the second main question, there is a need for an evaluation method that will list the general user importance for each quality attribute. Kano is a tool that can satisfy these desires. The Kano Model gives more insight into the fact that the performance of the quality attributes is not in a linear relationship with the corresponding customer satisfaction \citep{KANO1984}. Kano offers the possibility to divide the quality attributes into five categories that each have different effects on customer satisfaction (Attractive, Performance, Must-Be, Indifferent, Reverse). This division is done on the basis of the answers obtained from the survey (questions with five-level rating scale).\\
 
 \begin{figure}[ht]
 	\includegraphics[scale=0.35]{../LaTeX/Figures/KANO.png}
@@ -187,29 +190,32 @@ Performance: When a quality attribute from this category is present, the custome
 \break
 Indifferent: If a quality attribute from this category is present, then this has no effect on customer satisfaction.\\
 \break
-Must-Be: The customer considers this kind of quality attribute as necessary, when it is not present, the customer satisfaction will be drastically low.\\
+Must-Be: The customer considers this kind of quality attribute as necessary, when it is not present, the customer satisfaction will be drastically low and the product basically has failed at this point.\\
 \break
 Reverse: The more these quality attributes are present, the worse the customer satisfaction. The customer satisfaction increases when they are less present.\\
 
 \subsection{Survey arrangement}
-This survey is divided up into 4 parts, following the 4 research questions.\\
+The survey is divided up into 3 parts:\\
 \break
-\ul{Part 1 - Are current customer service chatbots effective in helping people and solving their problems?}\\
-In this part, questions are asked about the effective processing of tasks and knowledge.\\
+\ul{Part 1 - general information about the participant and information on the interaction with the chatbot}\\
 \break
-\ul{Part 2 - Are current customer service chatbots easy to use and accessible?}\\
-This part asks questions about ease of use and the availability of customer service chatbots.\\
+In the first part, general information about the participant is requested so that we can get a better idea of the person. The postal code, age, highest obtained degree, and gender are requested, these variables can be added as control variables in the static models to process the results.\\
 \break
-\ul{Part 3 - Do current customer service chatbots create a pleasant customer experience?}\\
-In this part, questions are asked about customer experience.\\
+Next, they are asked from which company they used the chatbot, what task they performed, in what language they addressed the chatbot and on what platform they addressed the chatbot.\\
 \break
-\ul{Part 4 - Do the consumer still prefer to use human over a Chatbot?}\\
-In this part, the respondent is asked if he/she prefers a chatbot or a human agent.\\ 
+\ul{Part 2 - questions about the interaction with the chatbot}\\
+\break
+The second part focuses on the interaction with the chatbot, the questions that were drawn up for the hypotheses in section \textbf{3.3.1 of the Methodology} are asked here. The results of this study are used to evaluate each company's chatbot, then a comparative study is conducted to determine which chatbot performs best.\\
+\break
+\ul{Part 3 - questions about the customer expectations of a telecom customer service chatbot}\\
+\break
+The third and final part of the survey asks what the customer expects from customer service chatbot in various scenarios. In order to put the participant in a certain context, three different scenarios were created in which a customer might find himself with the corresponding telecom services. The three scenarios are as follows:
+\begin{enumerate}
+	\item You haven't switched off your phone in a while and it suddenly ran out of battery. You have a problem because you don't remember your PIN code. You ask the chatbot if he can retrieve your PIN code given your client details. 
+	\item You're not happy with your subscription because it doesn't match your needs, from a friend you've heard there is a better deal and so you want the chatbot to stop your subscription.
+	\item At least once each month, you lose internet connectivity. You're sick and tired of these problems and you want to file a formal complaint. You turn to the chatbot of your telecom provider with your complaint.
+\end{enumerate}
+After a participant is introduced to each scenario, he/she is asked each time to give his/her opinion on the statements drawn up in \textbf{3.3.2 of the Methodology}. As already mentioned, the statements are questioned using a 5 rating scale, this terminology will then be used in the result processing through the KANO model.
 
 \subsection{Target group}
-The target group of the study will not be filtered on age or any other demographic aspects, rather we will focus on the telecom sector. Both the providers of the teleservices and the clients using these services will be targeted.
-
-% Changed files:
-% - Methodologie.tex
-% - ref.tex
-% - LiteratureStudy.tex
+The target group of our survey will not be filtered on age or other human characteristics, but it will be screened on whether the person has already had an experience with a telecom chatbot of a provider located in Belgium or in the Netherlands. The fact that the person already has experience with a telecom chatbot is crucial, otherwise the input for the comparative study is invalid.
