--- a/Thesis/LaTeX/Thankword.tex
+++ b/Thesis/LaTeX/Thankword.tex
@@ -1,13 +1,25 @@
 \chapter*{Thankword\hfill} \addcontentsline{toc}{chapter}{Thankword}
 \label{ch:thankword}
 
-Vedavyas Etikala
-Jan Vantienen
-Chatlayer
-Sandrine D'oreye
-Nike van Heeswijk
-Wisse Smit
-Laura Overwijk
-Chiara Portolani
-Justin Wesseling
-Alle respondenten anoniem bedanken --> bedankt aan iedereen die mee aan de survey heeft gedaan
+\begin{itemize}
+	\item Vedavyas Etikala
+	\item Jan Vantienen
+	\item Chatlayer
+	\item Sandrine D'oreye
+	\item Nike van Heeswijk
+	\item Wisse Smit
+	\item Laura Overwijk
+	\item Chiara Portolani
+	\item Justin Wesseling
+	\item Alle respondenten anoniem bedanken --> bedankt aan iedereen die mee aan de survey heeft gedaan
+	\item
+\end{itemize}
+
+
+
+
+
+
+
+
+
