Bug Fixes TexStudio

--- a/Thesis/LaTeX/Layout/Titlepage.tex
+++ b/Thesis/LaTeX/Layout/Titlepage.tex
@@ -33,8 +33,7 @@
 								{\large Information Management}\linebreak
 								\linebreak
 								\textbf{{\large Promoter:}}   Prof.\ Dr.\ Jan Vanthienen \linebreak
-								\textbf{{\large Co-promoter:}} Prof.\ Dr.\ ... \linebreak
-								\textbf{{\large Tutor:}} Prof.\ Dr.\ ... \linebreak
+								\textbf{{\large Tutor:}} Vedavyas Etikala \linebreak
 								
 								%\linebreak
 								
