--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -46,7 +46,7 @@ This categorisation results in \textbf{task-oriented} and \textbf{non-task-orien
 \end{enumerate}
 
 \section{Customer service chatbots in the telecom industry: a deeper insight}
-The telecom sector is an industry where customer satisfaction is an important factor. The different companies within this sector provide the same kind of services and products which makes switching operators easy. According to the research by \citep{Quintino2019}, the use of chatbots has a significant effect on customer satisfaction by ensuring better customer service. The findings from the research of \citeauthor{Quintino1019} were applied to Portuguese telecom companies, with this paper the line is further drawn into the Belgian \& Dutch telecom sector.\\
+The telecom sector is an industry where customer satisfaction is an important factor. The different companies within this sector provide the same kind of services and products which makes switching operators easy. According to the research by \citep{Quintino2019}, the use of chatbots has a significant effect on customer satisfaction by ensuring better customer service. The findings from the research of \citeauthor{Quintino1019} were applied to Portuguese telecom companies, with this paper the line is further drawn into the Belgian and Dutch telecom sector.\\
 
 \subsection{The Belgian telecom industry: market overview}
 The Belgian telecom sector is known as one of the most expensive in Europe, in the Eurostat survey conducted in 2019 it is even known as the most expensive in Europe \citep{Eurostat2020}. The services offered by the telecom operators can be divided into 2 categories: fixed internet and mobile.\\
@@ -143,7 +143,7 @@ In the past, customers could only make complaints and queries through mail or th
 \break
 Customer service chatbots offer the possibility to provide support to customers in real-time and around the clock. First of all, the chatbot will interpret the problem/question of the customer. Next, it will search in its model in which way it can best help the customer. Subsequently, the chatbot will execute the chosen approach until the customer's goal is reached.\\
 \break
-A chatbot for customer service must be tailor-made for the consumer. In the research performed by Brandtzaeg \& Følstad \citep{Brandtzaeg2018} it is mentioned that some companies push to introduce chatbots into their customer service, this then leads to a technological push. This push causes chatbots to become less qualitative and potentially lead to great frustrations for customers, therefore it is important that it contains the right features so that the consumer has a pleasant experience when coming into contact with the company. A pleasant experience in itself is difficult to measure, which is why this research will examine the various aspects of the user experience in this literature study.\\
+A chatbot for customer service must be tailor-made for the consumer. In the research performed by Brandtzaeg and Følstad \citep{Brandtzaeg2018} it is mentioned that some companies push to introduce chatbots into their customer service, this then leads to a technological push. This push causes chatbots to become less qualitative and potentially lead to great frustrations for customers, therefore it is important that it contains the right features so that the consumer has a pleasant experience when coming into contact with the company. A pleasant experience in itself is difficult to measure, which is why this research will examine the various aspects of the user experience in this literature study.\\
 
 \subsection{User’s perceptions of a chatbot}
 \ul{Talking with a technology-based system}\\
