--- a/Thesis/LaTeX/bibliografie.bib
+++ b/Thesis/LaTeX/bibliografie.bib
@@ -366,7 +366,7 @@
 	year = {2021},
 }
 @article{Rese2020,
-	abstract = {Currently, online retailers evaluate whether chatbots—software programs that interact with users using natural languages—could improve their customers' satisfaction. In a retail context, chatbots allow humans to pose shopping-related questions and receive answers in natural language without waiting for a salesperson or using other automated communication forms. However, until now, it has been unclear which customers accept this new communication form and which factors determine their acceptance. In this paper, we contrast the well-known technology acceptance model (TAM) with the lesser known uses and gratifications (U&G) theory, applying both approaches to measure the acceptance of the text-based “Emma” chatbot by its target segment. “Emma” was developed for the prepurchase phase of online fashion retailing and integrated into Facebook Messenger by the major German online retailer Zalando. Data were collected from 205 German Millennial respondents in a usability study. The results show that both utilitarian factors such as “authenticity of conversation” and “perceived usefulness,” as well as hedonic factors such as “perceived enjoyment”, positively influence the acceptance of “Emma”. However, privacy concerns and the immaturity of the technology had a negative effect on usage intention and frequency. The predictive power of both models was similar, showing little deviation, but U&G gives alternative insights into the customers’ motivation to use “Emma” compared to the TAM.},
+	abstract = {Currently, online retailers evaluate whether chatbots—software programs that interact with users using natural languages—could improve their customers' satisfaction. In a retail context, chatbots allow humans to pose shopping-related questions and receive answers in natural language without waiting for a salesperson or using other automated communication forms. However, until now, it has been unclear which customers accept this new communication form and which factors determine their acceptance. In this paper, we contrast the well-known technology acceptance model (TAM) with the lesser known uses and gratifications (U\&G) theory, applying both approaches to measure the acceptance of the text-based “Emma” chatbot by its target segment. “Emma” was developed for the prepurchase phase of online fashion retailing and integrated into Facebook Messenger by the major German online retailer Zalando. Data were collected from 205 German Millennial respondents in a usability study. The results show that both utilitarian factors such as “authenticity of conversation” and “perceived usefulness,” as well as hedonic factors such as “perceived enjoyment”, positively influence the acceptance of “Emma”. However, privacy concerns and the immaturity of the technology had a negative effect on usage intention and frequency. The predictive power of both models was similar, showing little deviation, but U\&G gives alternative insights into the customers’ motivation to use “Emma” compared to the TAM.},
 	author = {Alexandra Rese and Lena Ganster and Daniel Baier},
 	doi = {10.1016/j.jretconser.2020.102176},
 	issn = {09696989},
@@ -583,8 +583,8 @@
 }
 @report{Acm2021,
 	abstract = {This is the report of the Netherlands Authority for Consumers and Markets (ACM) with the market figures of the telecom sector. Based on data from the most important market participants in the telecom industry, the Telecom Monitor gives an overview of the trends in mobile services, fixed telephony, broadband, television, business network services, and bundles. The largest market participants in the sector regularly provide ACM with information about their activities for the Telecom Monitor. ACM verifies that data. In that way, ACM is able to keep track of the trends and developments in the various markets. The figures form a solid basis for ACM's three-year market analyses.},
-	author = {Netherlands Authority for Consumers & Market},
-	institution = {Authority for Consumers & Market},
+	author = {Netherlands Authority for Consumers \& Market},
+	institution = {Authority for Consumers \& Market},
 	month = {7},
 	title = {ACM Telecom Monitor for Q1 2021},
 	url = {https://www.acm.nl/nl/node/21100},
